--- a/eitimal/eitimal-main/videoconference_app/templates/login.html
+++ b/eitimal/eitimal-main/videoconference_app/templates/login.html
@@ -1,39 +1,78 @@
 {% load static %}
 <!DOCTYPE html>
-<!---Coding By CoderGirl | www.codinglabweb.com--->
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--<title>Login & Registration Form | CoderGirl</title>-->
   <!---Custom CSS File--->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/reg.css' %}">
+  <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+
 </head>
+
 <body>
   <div class="container">
-    <div class="login form">
-      <header>Login</header>
-      <form action="{% url 'login' %}" method="POST">
-        {% csrf_token %}
-        <input type="text" placeholder="Enter your email" name="email">
-        <input type="password" placeholder="Enter your password" name="password">
-        <input type="submit" class="button" value="Login">
-        <center>
-          {% if success %}
-          <p style="color: green;"><b>{{ success }}</b></p>
-          {% endif %}
-          {% if error %}
-          <p style="color: red;">{{ error }}</p>
-          {% endif %}
-        </center>
-      </form>
-      <div class="signup">
-        <span class="signup">Don't have an account?
-         <a href="{% url 'register' %}"><label for="check">Signup</label></a>
-        </span>
+    <section class="">
+      <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+        <div class="row gx-lg-5 align-items-center mb-5">
+          <div class="col-lg-6 mb-5 mb-lg-0">
+
+            <img src="{% static 'eitemal.png' %}" class="logo" alt='logo'></img>
+          </div>
+
+          <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+            <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+            <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+            <div class="card bg-glass">
+              <form action="{% url 'login' %}" method="POST">
+                {% csrf_token %}
+
+                <div class="card-body px-4 py-5 px-md-5">
+                  <h3 class="reg-title">Login</h3>
+                  <label class="form-label">Email address</label>
+                  <input type="email" class="form-control" name="email" />
+
+                  <label class="form-label">Password</label>
+                  <input type="password" class="form-control" name="password" />
+                  <br></br>
+                  <div class="d-flex justify-content-around">
+                    <input value="login" type="submit" class="btn btn-outline-primary custom-btn"
+                      data-mdb-ripple-color="dark">
+                    </input>
+
+                  </div>
+                  <center>
+                    {% if success %}
+                    <p style="color: green;"><b>{{ success }}</b></p>
+                    {% endif %}
+                    {% if error %}
+                    <p style="color: red;">{{ error }}</p>
+                    {% endif %}
+                  </center>
+                  <div class="end-labels">
+                    <p>
+                      Don't have an account?
+                      <a href="{% url 'register' %}">
+                        Register
+                      </a>
+                    </p>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
   </div>
 </body>
+
 </html>
