--- a/eitimal/eitimal-main/videoconference_app/templates/register.html
+++ b/eitimal/eitimal-main/videoconference_app/templates/register.html
@@ -1,40 +1,83 @@
 {% load static %}
 <!DOCTYPE html>
-<!---Coding By CoderGirl | www.codinglabweb.com--->
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--<title>Login & Registration Form | CoderGirl</title>-->
   <!---Custom CSS File--->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/reg.css' %}">
+  <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+
 </head>
+
 <body>
   <div class="container">
-    <div class="registration form">
-      <header>Signup</header>
-      <form action="{% url 'register' %}" method="POST">
-        {% csrf_token %}
-        <input type="text" placeholder="Enter your first name" name="first_name">
-        <input type="text" placeholder="Enter your last name" name="last_name">
-        <input type="text" placeholder="Enter your email" name="email">
-        <input type="password" placeholder="Create a password" name="password1">
-        <input type="password" placeholder="Confirm your password" name="password2">
-        <input type="submit" class="button" value="Signup">
-        <center>
-          {% if error %}
-          <p style="color: red;">{{ error }}</p>
-          {% endif %}
-        </center>
-        
-      </form>
-      <div class="signup">
-        <span class="signup">Already have an account?
-          <a href="{% url 'login' %}"><label for="check">Signin</label></a>
-        </span>
+    <section>
+      <div class="container px-4 py-3 px-md-5 text-center text-lg-start my-5">
+        <div class="row gx-lg-5 align-items-center mb-5">
+          <div class="col-lg-6 mb-5 mb-lg-0">
+
+            <img src="{% static 'eitemal.png' %}" class="logo" alt='logo'></img>
+          </div>
+
+          <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+            <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+            <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+            <div class="card bg-glass">
+              <div class="card-body px-4 py-3 px-md-5">
+                <h3 class="reg-title">Register</h3>
+                <form action="{% url 'register' %}" method="POST">
+                  {% csrf_token %}
+                  <label class="form-label">First Name</label>
+                  <input required type="text" class="form-control" name="first_name" />
+                  <label class="form-label">Last name</label>
+                  <input required type="text" class="form-control" name="last_name" />
+
+                  <label class="form-label">Email address</label>
+                  <input required type="email" class="form-control" name="email" />
+
+                  <label class="form-label">Password</label>
+                  <input required type="password" class="form-control" name="password1" />
+
+                  <label class="form-label">Confirm Password</label>
+                  <input required type="password" class="form-control" name="password2" />
+                  <br></br>
+                  <div class="d-flex justify-content-around">
+                    <input type="submit" value="Register" class="btn btn-outline-primary custom-btn"
+                      data-mdb-ripple-color="dark">
+                    </input>
+                  </div>
+                </form>
+                <center>
+                  {% if error %}
+                  <p style="color: red;">{{ error }}</p>
+                  {% endif %}
+                </center>
+                <div class="end-labels">
+                  <p>
+                    Already have an account?
+                    <a href="{% url 'login' %}">
+                      Login
+                    </a>
+                  </p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+
   </div>
 </body>
+
 </html>
