--- a/eitimal/eitimal-main/videoconference_app/templates/dashboard.html
+++ b/eitimal/eitimal-main/videoconference_app/templates/dashboard.html
@@ -2,20 +2,51 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Video Conference</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <body>
-    <div class="dashboard">
-        <h1>Welcome, {{name}}!</h1>
+  <link rel="stylesheet" href="{% static 'css/reg.css' %}">
+
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+    }
+  </style>
+
+<body>
+  <div class="col-lg-6 mb-5 mb-lg-0 position-relative my-5">
+    <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+    <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+    <div class="card bg-glass">
+
+      <div class="card-body px-4 py-4 px-md-6 dashboard">
+        <img src="{% static 'eitemal.png' %}" class="logo my-2" alt='logo'></img>
+        <h1 class="my-2">Welcome, {{name}}!</h1>
+
         <!-- create a "New Meeting" button -->
-        <a href="{% url 'meeting' %}" class="button">New Meeting</a>
-        <a href="{% url 'join_room' %}" class="button">Join Meeting</a>
-        <a href="{% url 'logout' %}" class="button">Logout</a>
+        <div class="links">
+
+          <a href="{% url 'meeting' %}" class="btn btn-outline-success mx-2 mt-2 custom-btn">New Meeting</a>
+          <a href="{% url 'join_room' %}" class="btn btn-outline-primary mx-2 mt-2 custom-btn">Join Meeting</a>
+          <a href="{% url 'logout' %}" class="btn btn-outline-danger mx-2 mt-2 custom-btn">Logout</a>
+        </div>
+      </div>
+
+
     </div>
-  </body>
+  </div>
+</body>
 </head>
+
 </html>
