--- a/eitimal/eitimal-main/videoconference_app/static/css/reg.css
+++ b/eitimal/eitimal-main/videoconference_app/static/css/reg.css
@@ -34,6 +34,16 @@
   overflow: hidden;
 }
 
+#radius-shape-3 {
+  border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+  bottom: -60px;
+  right: -110px;
+  width: 300px;
+  height: 300px;
+  background: radial-gradient(#50c4c8, #5214cd);
+  overflow: hidden;
+}
+
 .bg-glass {
   background-color: hsla(0, 0%, 100%, 0.9) !important;
   backdrop-filter: saturate(200%) blur(25px);
