--- a/eitimal/eitimal-main/videoconference_app/static/css/style.css
+++ b/eitimal/eitimal-main/videoconference_app/static/css/style.css
@@ -8,159 +8,6 @@
   font-family: 'Poppins', sans-serif;
 }
 
-/* body{
-  min-height: 100vh;
-  width: 100%;
-  background: #009579;
-}
-.container{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  max-width: 430px;
-  width: 100%;
-  background: #fff;
-  border-radius: 7px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.3);
-} */
-.custom-btn {
-  letter-spacing: 1px;
-  font-size: medium;
-  /* color: #5214cd; */
-  width: auto !important;
-}
-
-/* .container .registration{
-  display: none;
-}
-#check:checked ~ .registration{
-  display: block;
-}
-#check:checked ~ .login{
-  display: none;
-}
-#check{
-  display: none;
-} */
-/* .container .form{
-  padding: 2rem;
-}
-.form header{
-  font-size: 2rem;
-  font-weight: 500;
-  text-align: center;
-  margin-bottom: 1.5rem;
-}
- .form input{
-   height: 60px;
-   width: 100%;
-   padding: 0 15px;
-   font-size: 17px;
-   margin-bottom: 1.3rem;
-   border: 1px solid #ddd;
-   border-radius: 6px;
-   outline: none;
- }
- .form input:focus{
-   box-shadow: 0 1px 0 rgba(0,0,0,0.2);
- }
-.form a{
-  font-size: 16px;
-  color: #009579;
-  text-decoration: none;
-}
-.form a:hover{
-  text-decoration: underline;
-}
-.form input.button{
-  color: #fff;
-  background: #009579;
-  font-size: 1.2rem;
-  font-weight: 500;
-  letter-spacing: 1px;
-  margin-top: 1.7rem;
-  cursor: pointer;
-  transition: 0.4s;
-}
-.form input.button:hover{
-  background: #006653;
-}
-.signup{
-  font-size: 17px;
-  text-align: center;
-}
-.signup label{
-  color: #009579;
-  cursor: pointer;
-}
-.signup label:hover{
-  text-decoration: underline;
-}
-
-/* Center the div with class name 'intro'
-    and set the width to 100% */
-.intro {
-  margin: auto;
-  width: 100%;
-  padding: 10px;
-}
-
-/* Set the background color to green
-    and the text color to white */
-.intro {
-  color: white;
-}
-
-/* Make the text inside the div with class name intro look bold and attractive */
-.intro h1 {
-  font-size: 50px;
-  font-weight: bold;
-  text-align: center;
-}
-
-/* center the h2 tag inside the div with class name intro */
-.intro h2 {
-  text-align: center;
-}
-
-/* vertically align the div with class name intro to the center of the page */
-.intro {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-/* make the buttons inside the div with class name intro look attractive */
-/* .intro a {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-} */
-
-/* center the buttons inside the div with class name intro */
-/* .intro a {
-  margin-top: 7px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-} */
-
-/* make the buttons inside the div with class name intro look attractive when hovered */
-/* .intro a:hover {
-  background-color: #45a049;
-} */
-
-
 /** align the text inside the div named dashboard to the center */
 .dashboard h1 {
   font-size: 30px;
@@ -174,7 +21,10 @@
   height: 350px;
 
 }
-
+.intro{
+  display: flex;
+  justify-content: center;
+}
 
 .dashboard {
   display: flex;
@@ -183,7 +33,16 @@
   justify-content: center;
   justify-self: center;
 }
-
+.welcome {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-self: center;
+}
+.intro-title{
+  color: #f84575;
+}
 .links {
   display: flex;
   flex-direction: row;
