--- a/eitimal/eitimal-main/videoconference_app/templates/index.html
+++ b/eitimal/eitimal-main/videoconference_app/templates/index.html
@@ -2,20 +2,47 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Video Conference</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/reg.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <body>
-    <div class="intro">
-        <h1>Welcome to my Awesome Video Conferencing App!</h1>
-        <h2>For all your professional and personal needs!</h2>
-        <!-- create a signup and signin button-->
-        <a href="{% url 'login' %}" class="button">Sign In</a>
-        <a href="{% url 'register' %}" class="button">Sign Up</a>
+
+<body>
+  <div class="intro">
+    <div class="col-lg-6 mb-5 mb-lg-0 position-relative my-5">
+      <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+      <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+      <div id="radius-shape-3" class="position-absolute shadow-5-strong"></div>
+
+      <div class="card bg-glass">
+
+        <div class="card-body px-4 py-4 px-md-6 welcome">
+          <img src="{% static 'eitemal.png' %}" class="logo my-2" alt='logo'></img>
+          <h1 class="my-2 intro-title">Welcome to Eitemal!</h1>
+          <div class="links">
+
+            <a href="{% url 'login' %}" class="btn btn-outline-primary mx-2 custom-btn">Sign In</a>
+            <a href="{% url 'register' %}" class="btn btn-outline-primary mx-2 custom-btn">Sign Up</a>
+          </div>
+
+        </div>
+
+
+      </div>
     </div>
-  </body>
+    <!-- <h2>For all your professional and personal needs!</h2> -->
+    <!-- create a signup and signin button-->
+  </div>
+</body>
 </head>
+
 </html>
