--- a/eitimal/eitimal-main/videoconference_app/templates/videocall.html
+++ b/eitimal/eitimal-main/videoconference_app/templates/videocall.html
@@ -6,6 +6,9 @@
             width: 100vw;
             height: 100vh;
             }
+            body{
+                margin: 0;
+            }
     </style>
 </head>
 
